--- a/app/Resources/views/backoffice_base.html.twig
+++ b/app/Resources/views/backoffice_base.html.twig
@@ -54,7 +54,7 @@
                 {% for type, flash_messages in app.session.flashBag.all %}
                     {% for flash_message in flash_messages %}
                         <div class="alert alert-{{ type }}">
-                            {{ flash_message }}
+                            {{ flash_message | raw }}
                         </div>
                     {% endfor %}
                 {% endfor %}
