Fix des bêtises dans 87cf352d518612d9c351f6bf0e5658db261e6c08

--- a/app/Resources/views/backoffice_base.html.twig
+++ b/app/Resources/views/backoffice_base.html.twig
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="{{ asset('CoreUI/bower_components/fontawesome/css/font-awesome.min.css') }}" type="text/css" />
         <link rel="stylesheet" href="{{ asset('CoreUI/bower_components/simple-line-icons/css/simple-line-icons.css') }}" type="text/css" />
         <link rel="stylesheet" href="{{ asset('CoreUI/css/style.css') }}" type="text/css" />
-
+        <link rel="stylesheet" href="{{ asset('front/assets/css/kdt-inputs.css') }}" type="text/css" />
 
         <!-- Generic favicon -->
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
