--- a/src/AppBundle/Resources/views/backoffice/poll/add.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/poll/add.html.twig
@@ -1,7 +1,7 @@
 {% extends "::backoffice_base.html.twig" %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('css/kdt-inputs.css') }}" type="text/css"/>
+    <link rel="stylesheet" href="{{ asset('front/assets/css/kdt-inputs.css') }}" type="text/css"/>
 {% endblock %}
 
 {% block bodyclass %}app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden{% endblock %}
