--- a/web/front/assets/css/style.css
+++ b/web/front/assets/css/style.css
@@ -43,7 +43,7 @@ header {
 }
 
 h1 {
-    font-family: 'Raleway-Bold';
+    font-family: 'Raleway-Bold', sans-serif;
     color: #fff;
 }
 
@@ -52,7 +52,7 @@ h1 {
 }
 
 h2 {
-    font-family: 'Raleway-Regular';
+    font-family: 'Raleway-Regular', sans-serif;
 }
 
 hr {
@@ -64,7 +64,7 @@ hr {
     color: #fff;
     background-color: #20a8d8;
     border-color: #20a8d8;
-    border-radius: 0px;
+    border-radius: 0;
     transition: all .2s ease-in-out;
 }
 
@@ -89,107 +89,9 @@ footer {
 }
 
 .signature {
-    font-family: 'Raleway-Light';
+    font-family: 'Raleway-Light', sans-serif;
 }
 
-/*--- Input radio/checkbox personnalisés ---*/
-
-.kdt-radio {
-    text-align: center;
-}
-
-.kdt-radio [type="radio"],
-.kdt-checkbox [type="checkbox"] {
-    display: none;
-}
-
-.kdt-radio [type="radio"] ~ label,
-.kdt-checkbox [type="checkbox"] ~ label {
-    position: relative;
-}
-
-.kdt-radio [type="radio"] ~ label {
-    padding-top: 26px;
-}
-
-.kdt-checkbox [type="checkbox"] ~ label {
-    padding-left: 26px;
-}
-
-.kdt-radio [type="radio"] ~ label::before,
-.kdt-radio [type="radio"] ~ label::after,
-.kdt-checkbox [type="checkbox"] ~ label::before,
-.kdt-checkbox [type="checkbox"] ~ label::after {
-    content: ' ';
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 20px;
-    width: 20px;
-}
-
-.kdt-radio [type="radio"] ~ label::before,
-.kdt-radio [type="radio"] ~ label::after {
-    left: 50%;
-    transform: translateX(-50%);
-    border-radius: 50%;
-}
-
-.kdt-radio [type="radio"] ~ label::before,
-.kdt-checkbox [type="checkbox"] ~ label::before {
-    border: 2px solid #4d4d4d;
-    background-color: #fff;
-}
-
-.kdt-radio [type="radio"] ~ label::after,
-.kdt-checkbox [type="checkbox"] ~ label::after {
-    height: 0;
-    width: 0;
-    top: 10px;
-    left: 6px;
-    transition: all .1s linear;
-}
-
-.kdt-checkbox [type="checkbox"] ~ label::after {
-    top: 10px;
-    left: 10px;
-}
-
-.kdt-radio [type="radio"]:checked ~ label::after,
-.kdt-checkbox [type="checkbox"]:checked ~ label::after {
-    top: 5px;
-    background-color: #20a8d8;
-    height: 10px;
-    width: 10px;
-}
-
-.kdt-checkbox [type="checkbox"]:checked ~ label::after {
-    left: 5px;
-    top: 5px;
-}
-
-.kdt-radio [type="radio"]:disabled ~ label,
-.kdt-checkbox [type="checkbox"]:disabled ~ label {
-    opacity: .5;
-}
-
-.kdt-radio-aside [type="radio"] ~ label::before,
-.kdt-radio-aside [type="radio"] ~ label::after {
-    left: 0;
-}
-
-.kdt-radio-aside [type="radio"] ~ label {
-    padding-top: 0;
-    padding-left: 15px;
-}
-
-.responsive-linear-scale {
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
-    width: 100%;
-    height: 5em;
-}
 
 .responsive-linear-scale > div {
     flex: 1;
