--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -11,7 +11,7 @@
                             <h1>{{ 'layout.login.title'|trans({}, 'FOSUserBundle') }}</h1>
                             <p class="text-muted">{{ 'layout.login.long'|trans({}, 'FOSUserBundle') }}</p>
                             {% if error %}
-                                <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                             {% endif %}
                             {% if csrf_token %}
                                 <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
