--- a/src/AppBundle/Resources/views/index.html.twig
+++ b/src/AppBundle/Resources/views/index.html.twig
@@ -1,10 +1,22 @@
 {% extends '::base.html.twig' %}
 
+{% block title %}
+    Accueil
+{% endblock %}
+
 {% block content %}
-    <a href="{{ path('fos_user_registration_register') }}" class="btn btn-primary">
-        {{ 'layout.register' | trans({}, 'FOSUserBundle') }}
-    </a>
-    <a href="{{ path('fos_user_security_login') }}" class="btn btn-primary">
-        {{ 'layout.login' | trans({}, 'FOSUserBundle') }}
-    </a>
+    <p>Page d'accueil à travailler</p>
+
+    {% if app.user %}
+        <a href="{{ path('backoffice') }}" class="btn btn-success">
+            Accéder au backoffice
+        </a>
+    {% else %}
+        <a href="{{ path('fos_user_registration_register') }}" class="btn btn-primary">
+            {{ 'layout.register' | trans({}, 'FOSUserBundle') }}
+        </a>
+        <a href="{{ path('fos_user_security_login') }}" class="btn btn-primary">
+            {{ 'layout.login' | trans({}, 'FOSUserBundle') }}
+        </a>
+    {% endif %}
 {% endblock %}
