--- a/src/AppBundle/Resources/views/polls/answer.html.twig
+++ b/src/AppBundle/Resources/views/polls/answer.html.twig
@@ -1,7 +1,11 @@
 {% extends '::base.html.twig' %}
 
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('front/assets/css/kdt-inputs.css') }}" type="text/css">
+{% endblock %}
+
 {% block title %}
-    {{ poll.title }}
+    Répondre au sondage « {{ poll.title }} »
 {% endblock %}
 
 {% block poll_title %}
@@ -41,9 +45,9 @@
                             <div class="row">
                                 <div class="responsive-linear-scale">
                                     {% for choice in choices %}
-
-                                        <div class="kdt-radio">
-                                            <input type="radio" id="{{ id ~ '_' ~ choice.data }}" {{ block('widget_attributes') }}{% if choice.value is defined %} value="{{ choice.value }}"{% endif %}>
+                                        <div class="kdt-radio kdt-radio-above">
+                                            <input type="radio"
+                                                   id="{{ id ~ '_' ~ choice.data }}" {{ block('widget_attributes') }}{% if choice.value is defined %} value="{{ choice.value }}"{% endif %}>
                                             <label for="{{ id ~ '_' ~ choice.data }}">{{ choice.label }}</label>
                                         </div>
                                     {% endfor %}
@@ -52,8 +56,9 @@
                         {% else %}
                             {% for choice in choices %}
                                 <div class="row">
-                                    <div class="kdt-{% if multiple %}checkbox{% else %}radio{% endif %} kdt-{% if multiple %}checkbox{% else %}radio{% endif %}-aside">
-                                        <input type="{% if multiple %}checkbox{% else %}radio{% endif %}" id="{{ id ~ '_' ~ choice.data }}" {{ block('widget_attributes') }}{% if choice.value is defined %} value="{{ choice.value }}"{% endif %}>
+                                    <div class="kdt-{% if multiple %}checkbox{% else %}radio{% endif %} kdt-{% if multiple %}checkbox{% else %}radio{% endif %}">
+                                        <input type="{% if multiple %}checkbox{% else %}radio{% endif %}"
+                                               id="{{ id ~ '_' ~ choice.data }}" {{ block('widget_attributes') }}{% if choice.value is defined %} value="{{ choice.value }}"{% endif %}>
                                         <label for="{{ id ~ '_' ~ choice.data }}">{{ choice.label }}</label>
                                     </div>
                                 </div>
@@ -68,14 +73,14 @@
 
 {% block content %}
     {{ form_start(pollView,{attr: {'novalidate':'novalidate'}}) }}
-        {% for page in poll.pages %}
-            <div class="row">
-                <div class="col"><h3 class="p-3">{{ page.title }}</h3></div>
-                <div class="col text-right"><h4>Page {{ loop.index }} sur {{ poll.pages|length }}</h4></div>
-            </div>
-            {% for question in page.questions %}
-                {{ form_widget(attribute(pollView, 'question' ~ question.id)) }}
-            {% endfor %}
+    {% for page in poll.pages %}
+        <div class="row">
+            <div class="col"><h3 class="p-3">{{ page.title }}</h3></div>
+            <div class="col text-right"><h4>Page {{ loop.index }} sur {{ poll.pages|length }}</h4></div>
+        </div>
+        {% for question in page.questions %}
+            {{ form_widget(attribute(pollView, 'question' ~ question.id)) }}
         {% endfor %}
+    {% endfor %}
     {{ form_end(pollView) }}
 {% endblock %}
