--- a/app/Resources/views/backoffice_base.html.twig
+++ b/app/Resources/views/backoffice_base.html.twig
@@ -7,7 +7,7 @@
         {% block head_meta %}
 
         {% endblock %}
-        <title>{% block title %}Kodastran Admin{% endblock %}</title>
+        <title>{% block title %}{% endblock %} | Kodastran</title>
         <!-- Generic top stylesheet -->
         <link rel="stylesheet" href="{{ asset('CoreUI/bower_components/bootstrap/dist/css/bootstrap.min.css') }}" type="text/css" />
         <link rel="stylesheet" href="{{ asset('CoreUI/bower_components/fontawesome/css/font-awesome.min.css') }}" type="text/css" />
