--- a/src/AppBundle/Resources/views/Profile/delete.html.twig
+++ b/src/AppBundle/Resources/views/Profile/delete.html.twig
@@ -4,13 +4,11 @@
 {% block title %}{{ 'delete_account' | trans }}{% endblock %}
 
 {% block fos_user_content %}
-
     <h1 class="text-center">{{ 'delete_account' | trans }}</h1>
     <hr>
 
     <div class="row justify-content-center">
-
-        <div class="col-xs-4">
+        <div class="col-md-3">
             {{ form_start(form) }}
             {{ form_row(form.password) }}
 
