--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         {% block head_meta %}{% endblock %}
-        <title>{% block title %}Accueil{% endblock %} - Kodrastan</title>
+        <title>{% block title %}Accueil{% endblock %} |	Kodrastan</title>
         <!-- Generic top stylesheet -->
         <link rel="stylesheet" href="{{ asset('CoreUI/bower_components/bootstrap/dist/css/bootstrap.min.css') }}" type="text/css" />
         <link rel="stylesheet" href="{{ asset('front/assets/css/style.css') }}" type="text/css">
