--- a/src/AppBundle/Resources/views/backoffice/users/index.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/users/index.html.twig
@@ -1,7 +1,10 @@
 {% extends "::backoffice_base.html.twig" %}
 {% trans_default_domain 'users' %}
 
+{% block title %}{{ 'users_list' | trans }}{% endblock %}
+
 {% block bodyclass %}app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden{% endblock %}
+
 {% block main %}
     <h1 class="text-center pb-2">{{ 'users_list' | trans }}</h1>
     <table class="table">
