--- a/src/AppBundle/Resources/views/polls/answer.html.twig
+++ b/src/AppBundle/Resources/views/polls/answer.html.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block title %}
-    {{ 'answer_to_poll' | trans({'{title}': poll.title}) }}
+    {{ poll.title }}
 {% endblock %}
 
 {% block poll_title %}
@@ -36,36 +36,34 @@
 
 {% block choice_widget %}
     <div class="row">
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-block">
-                    <h2 class="card-title text-center">{{ label }}</h2>
-                    <hr>
-                    <div class="card-text container">
-                        {% if expanded %}
-                            <div class="row">
-                                <div class="responsive-linear-scale">
-                                    {% for choice in choices %}
-                                        <div class="kdt-radio kdt-radio-above">
-                                            <input type="radio"
-                                                   id="{{ id ~ '_' ~ choice.data }}" {{ block('widget_attributes') }}{% if choice.value is defined %} value="{{ choice.value }}"{% endif %}>
-                                            <label for="{{ id ~ '_' ~ choice.data }}">{{ choice.label }}</label>
-                                        </div>
-                                    {% endfor %}
-                                </div>
-                            </div>
-                        {% else %}
-                            {% for choice in choices %}
-                                <div class="row">
-                                    <div class="kdt-{% if multiple %}checkbox{% else %}radio{% endif %} kdt-{% if multiple %}checkbox{% else %}radio{% endif %}">
-                                        <input type="{% if multiple %}checkbox{% else %}radio{% endif %}"
+        <div class="card">
+            <div class="card-block">
+                <h2 class="card-title text-center">{{ label }}</h2>
+                <hr>
+                <div class="card-text container">
+                    {% if expanded %}
+                        <div class="row">
+                            <div class="responsive-linear-scale">
+                                {% for choice in choices %}
+                                    <div class="kdt-radio kdt-radio-above">
+                                        <input type="radio"
                                                id="{{ id ~ '_' ~ choice.data }}" {{ block('widget_attributes') }}{% if choice.value is defined %} value="{{ choice.value }}"{% endif %}>
                                         <label for="{{ id ~ '_' ~ choice.data }}">{{ choice.label }}</label>
                                     </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    {% else %}
+                        {% for choice in choices %}
+                            <div class="row">
+                                <div class="kdt-{% if multiple %}checkbox{% else %}radio{% endif %} kdt-{% if multiple %}checkbox{% else %}radio{% endif %}">
+                                    <input type="{% if multiple %}checkbox{% else %}radio{% endif %}"
+                                           id="{{ id ~ '_' ~ choice.data }}" {{ block('widget_attributes') }}{% if choice.value is defined %} value="{{ choice.value }}"{% endif %}>
+                                    <label for="{{ id ~ '_' ~ choice.data }}">{{ choice.label }}</label>
                                 </div>
-                            {% endfor %}
-                        {% endif %}
-                    </div>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -77,9 +75,11 @@
 
     {% for page in poll.pages %}
         <div class="row">
-            <div class="col"><h3 class="p-3">{{ page.title }}</h3></div>
-            <div class="col text-right">
-                <h4>{{ 'page_x_on_y' | trans({'{x}': loop.index, '{y}': poll.pages | length}) }}</h4>
+            <div class="col">
+                <h3>
+                    {{ page.title }}
+                    <small class="float-right">{{ 'page_x_on_y' | trans({'{x}': loop.index, '{y}': poll.pages | length}) }}</small>
+                </h3>
             </div>
         </div>
         {% for question in page.questions %}
