--- a/src/AppBundle/Resources/views/backoffice/partial/_header.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/partial/_header.html.twig
@@ -2,7 +2,7 @@
 
 <header class="app-header navbar">
     <button class="navbar-toggler mobile-sidebar-toggler hidden-lg-up" type="button">☰</button>
-    <a class="navbar-brand" href="#"></a>
+    <a class="navbar-brand" href="{{ path('homepage') }}"></a>
     <ul class="nav navbar-nav hidden-md-down">
         <li class="nav-item">
             <a class="nav-link navbar-toggler sidebar-toggler" href="#">☰</a>
