--- a/web/front/assets/css/kdt-inputs.css
+++ b/web/front/assets/css/kdt-inputs.css
@@ -71,6 +71,13 @@
     opacity: .4;
 }
 
+/* Etat invalide */
+
+.kdt-radio [type="radio"].error::before,
+.kdt-checkbox [type="checkbox"].error::before {
+    border-color: indianred;
+}
+
 /* Radio au dessus */
 
 .kdt-radio-above {
