--- a/src/AppBundle/Resources/views/backoffice/poll/index.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/poll/index.html.twig
@@ -4,11 +4,35 @@
 {% block title %}{{ 'admin_poll.polls_list' | trans }}{% endblock %}
 
 {% block bodyclass %}app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden{% endblock %}
-
-{% block main %}
 <h1 class="text-center">{{ 'admin_poll.polls_list' | trans }}</h1>
 <hr>
-
+<a href="{{ path('backoffice_poll_publish', {'id': poll.id}) }}"
+   class="btn btn-primary">
+    <i class="fa fa-bullhorn "></i>&nbsp;Publier
+</a>
+{% else %}
+<a href="{{ path('backoffice_poll_results', {'id': poll.id}) }}"
+   class="btn btn-success">
+    <i class="fa fa-eye"></i>&nbsp;Réponses
+</a>
+<button data-toggle="modal" data-target="#shareModal"
+        data-url="{{ url('answer_poll', {'token':poll.accessToken}) }}"
+        data-id="{{ poll.id }}"
+        class="btn btn-info send-mail-modal" title="Envoyer par mail">
+    <i class="fa fa-envelope"></i>
+</button>
+<a class="btn btn-info" title="Partager sur facebook"
+   href="https://www.facebook.com/sharer.php?u={{ url('answer_poll', {'token':poll.accessToken}) }}"
+   onclick="return !window.open(this.href, 'Share on Facebook', 'width=500,height=500')"
+   target="_blank">
+    <i class="fa fa-facebook"></i>
+</a>
+<a class="btn btn-info" title="Partager sur Twitter"
+   href="https://twitter.com/intent/tweet?&url={{ url('answer_poll', {'token':poll.accessToken}) }}"
+   onclick="return !window.open(this.href, 'Share on Twitter', 'width=500,height=500')"
+   target="_blank">
+    <i class="fa fa-twitter"></i>
+</a>
 <div class="row mb-1">
     <div class="col-md-12">
         <a target="_blank" href="{{ path('backoffice_polls_add') }}" class="btn btn-primary btn-lg btn-block">
@@ -134,11 +158,10 @@
                     Vous pouvez partager ce sondage via ce lien :
 
                     <div class="input-group">
-
                         <input type="text" id="thisPollId" class="form-control" readonly="readonly" value="Erreur">
                         <span class="input-group-btn">
-                                <button id="copy" class="btn btn-secondary" type="button"><i class="fa fa-clipboard"
-                                                                                             aria-hidden="true"></i>&nbsp;Copier</button>
+                                <button id="copy" class="btn btn-secondary" type="button">
+                                    <i class="fa fa-clipboard" aria-hidden="true"></i>
                               </span>
 
                     </div>
@@ -148,22 +171,31 @@
                 <div class="col-md-12">
                     Envoyer ce sondage à une adresse e-mail :
                     <div class="input-group">
-
-                        <input class="form-control" type="email" name="user_email">
+                        <input class="form-control" placeholder="Saisissez une adresse e-mail" type="email"
+                               name="user_email" id="user_email">
+                        <input class="hidden-xs-up" type="number" name="poll_id" readonly="readonly" id="poll_id">
                         <span class="input-group-btn">
-                                <button class="btn btn-info" type="button"><i class="fa fa-envelope-o"
-                                                                              aria-hidden="true"></i>&nbsp;Envoyer</button>
-                              </span>
+                                <button class="btn btn-info" id="send-mail"
+                                        data-post="{{ path('backoffice_send_mail') }}" type="button"><i
+                                            class="fa fa-envelope-o"
+                                            aria-hidden="true"></i>&nbsp;Envoyer</button>
+                            </span>
+                    </div>
+                    <div class="col-md-12 mt-1" id="mail_errors">
+                        Une erreur est survenue ,verifiez que l'adresse e-mail et valide. Si l'erreur persiste contactez
+                        votre administrateur.
                     </div>
                 </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+                </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
-            </div>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
         </div>
     </div>
 </div>
 
-</div>
 
 {% endblock %}
