Refactoring des translations

--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -1,6 +1,6 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-<h1 class="text-center">Aperçu du profil</h1>
+<h1 class="text-center">{{ 'profile.preview' | trans }}</h1>
 <hr>
 
 <div class="fos_user_user_show row justify-content-center">
