--- a/app/Resources/FOSUserBundle/views/Profile/show.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show.html.twig
@@ -1,6 +1,7 @@
 {% extends "FOSUserBundle::layout.html.twig" %}
+{% trans_default_domain 'FOSUserBundle' %}
 
-{% block title %}Aperçu du profil{% endblock %}
+{% block title %}{{ 'profile.preview' | trans }}{% endblock %}
 
 {% block fos_user_content %}
 {% include "FOSUserBundle::Profile/show_content.html.twig" %}
