--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -1,12 +1,12 @@
 {% extends '::base.html.twig' %}
-{% trans_default_domain 'front' %}
+{% trans_default_domain 'AppBundle' %}
 
 {% block title %}
-    {{ 'Kodrastan - ' ~ 'error.404.message'|trans }}
+    {{ 'Kodrastan - ' ~ 'front.error.not_found.message'|trans }}
 {% endblock %}
 
 {% block poll_title %}
-    {{ 'error.404.message'|trans }}
+    {{ 'front.error.not_found.message'|trans }}
 {% endblock %}
 
 {% block content %}
@@ -15,7 +15,7 @@
             <div class="card">
                 <div class="card-block">
                     <h2 class="card-title text-center">
-                        {{ 'poll.error.not_found'|trans }}
+                        {{ 'front.poll.error.not_found'|trans }}
                         <br>
                         &#9785;
                     </h2>
