--- a/src/AppBundle/Resources/views/backoffice/index.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/index.html.twig
@@ -1,5 +1,5 @@
 {% extends "::backoffice_base.html.twig" %}
-{% trans_default_domain 'home' %}
+{% trans_default_domain 'AppBundle' %}
 
 {% block bodyclass %}app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden{% endblock %}
 
@@ -11,7 +11,7 @@
                     <div class="card card-inverse card-primary">
                         <div class="card-block pb-0">
                             <h4 class="mb-0">{{ data.nbUsers }}</h4>
-                            <p>{{ 'nb_registred_users' | trans }}</p>
+                            <p>{{ 'backoffice_home.nb_registred_users' | trans }}</p>
                         </div>
                         <div class="chart-wrapper px-1" style="height:70px;">
                             <canvas id="card-chart1" class="chart" height="70"></canvas>
@@ -25,7 +25,7 @@
                 <div class="card card-inverse card-info">
                     <div class="card-block pb-0">
                         <h4 class="mb-0">{{ data.nbPolls }}</h4>
-                        <p>{{ 'nb_polls' | trans }}</p>
+                        <p>{{ 'backoffice_home.nb_polls' | trans }}</p>
                     </div>
                     <div class="chart-wrapper px-1" style="height:70px;">
                         <canvas id="card-chart2" class="chart" height="70"></canvas>
@@ -39,7 +39,7 @@
                     <div class="card-block pb-0">
 
                         <h4 class="mb-0">{{ data.nbAnswers }}</h4>
-                        <p>{{ 'nb_answers' | trans }}</p>
+                        <p>{{ 'backoffice_home.nb_answers' | trans }}</p>
                     </div>
                     <div class="chart-wrapper" style="height:70px;">
                         <canvas id="card-chart3" class="chart" height="70"></canvas>
