--- a/src/AppBundle/Resources/views/backoffice/partial/_sidebar.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/partial/_sidebar.html.twig
@@ -1,28 +1,29 @@
-{% trans_default_domain 'sidebar' %}
+{% trans_default_domain 'AppBundle' %}
+
 <div class="sidebar">
     <nav class="sidebar-nav">
         <ul class="nav">
             <li class="nav-item">
                 <a href="{{ path('backoffice') }}" class="nav-link">
                     <i class="icon-home"></i>
-                    {{ 'homepage' | trans }}
+                    {{ 'sidebar.homepage' | trans }}
                 </a>
             </li>
             <li class="nav-item">
                 <a href="{{ path('backoffice_polls_add') }}" class="nav-link">
                     <i class="icon-plus"></i>
-                    {{ 'add_poll' | trans }}
+                    {{ 'sidebar.add_poll' | trans }}
                 </a>
                 <a href="{{ path('backoffice_polls') }}" class="nav-link">
                     <i class="icon-list"></i>
-                    {{ 'polls_list' | trans }}
+                    {{ 'sidebar.polls_list' | trans }}
                 </a>
             </li>
             {% if is_granted('ROLE_ADMIN') %}
                 <li class="nav-item">
                     <a href="{{ path('backoffice_users') }}" class="nav-link">
                         <i class="icon-user"></i>
-                        {{ 'users_list' | trans }}
+                        {{ 'sidebar.users_list' | trans }}
                     </a>
                 </li>
             {% endif %}
