--- a/src/AppBundle/Resources/views/backoffice/poll/add.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/poll/add.html.twig
@@ -1,7 +1,7 @@
 {% extends "::backoffice_base.html.twig" %}
-{% trans_default_domain 'admin-poll' %}
+{% trans_default_domain 'AppBundle' %}
 
-{% block title %}{{ 'poll.creation' | trans }}{% endblock %}
+{% block title %}{{ 'admin_poll.poll.creation' | trans }}{% endblock %}
 
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('front/assets/css/kdt-inputs.css') }}" type="text/css"/>
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block javascripts %}
-    {{ loadTranslationsForVueJS('admin-poll') }}
+    {{ loadTranslationsForVueJS('AppBundle', '[admin_poll][form]') }}
     {{ loadVariantsFromDatabase() }}
 
     <script>
