--- a/src/AppBundle/Resources/views/backoffice/poll/index.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/poll/index.html.twig
@@ -1,18 +1,18 @@
 {% extends "::backoffice_base.html.twig" %}
-{% trans_default_domain 'admin-poll' %}
+{% trans_default_domain 'AppBundle' %}
 
-{% block title %}{{ 'polls_list' | trans }}{% endblock %}
+{% block title %}{{ 'admin_poll.polls_list' | trans }}{% endblock %}
 
 {% block bodyclass %}app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden{% endblock %}
 
 {% block main %}
-    <h1 class="text-center">{{ 'polls_list' | trans }}</h1>
+    <h1 class="text-center">{{ 'admin_poll.polls_list' | trans }}</h1>
     <hr>
 
     <div class="row mb-1">
         <div class="col-md-12">
             <a target="_blank" href="{{ path('backoffice_polls_add') }}" class="btn btn-primary btn-lg btn-block">
-                <i class="fa fa-plus-circle"></i>&nbsp;{{ 'create_new_poll' | trans }}
+                <i class="fa fa-plus-circle"></i>&nbsp;{{ 'admin_poll.create_new_poll' | trans }}
             </a>
         </div>
     </div>
@@ -21,9 +21,9 @@
             <table class="table table-bordered table-striped table-condensed">
                 <thead>
                 <tr>
-                    <th>{{ 'title' | trans }}</th>
-                    <th>{{ 'author' | trans }}</th>
-                    <th>{{ 'is_published' | trans }}</th>
+                    <th>{{ 'admin_poll.table.title' | trans }}</th>
+                    <th>{{ 'admin_poll.table.author' | trans }}</th>
+                    <th>{{ 'admin_poll.table.is_published' | trans }}</th>
                     <th></th>
                 </tr>
                 </thead>
@@ -36,44 +36,44 @@
                                 {{ poll.title }}&nbsp;<i class="fa fa-external-link" aria-hidden="true"></i></a>
                         </td>
                         <td>
-                            <a href="mailto:{{ entry.email }}?subject={{ 'about_the_poll' | trans({'{title}': poll.title}) }}">
+                            <a href="mailto:{{ entry.email }}?subject={{ 'admin_poll.table_values.about_the_poll' | trans({'{title}': poll.title}) }}">
                                 {{ entry.email }}
                             </a>
                         </td>
                         <td>
                             {% if poll.published %}
-                                {{ 'yes' | trans }}
+                                {{ 'admin_poll.table_values.yes' | trans }}
                             {% else %}
-                                {{ 'no' | trans }}
+                                {{ 'admin_poll.table_values.no' | trans }}
                             {% endif %}
                         </td>
                         <td>
                             {% if poll.published %}
                                 <a href="{{ path('backoffice_poll_results', {'id': poll.id}) }}"
                                    class="btn btn-success">
-                                    <i class="fa fa-eye"></i>&nbsp;{{ 'answers' | trans }}
+                                    <i class="fa fa-eye"></i>&nbsp;{{ 'admin_poll.table_values.answers' | trans }}
                                 </a>
                                 <a href="#"
                                    class="btn btn-primary">
-                                    <i class="fa fa-share"></i>&nbsp;{{ 'share' | trans }}
+                                    <i class="fa fa-share"></i>&nbsp;{{ 'admin_poll.table_values.share' | trans }}
                                 </a>
                             {% else %}
                                 <a href="{{ path('backoffice_poll_edit', {'id': poll.id}) }}"
                                    class="btn btn-outline-primary">
-                                    <i class="fa fa-pencil"></i>&nbsp;{{ 'edit' | trans }}
+                                    <i class="fa fa-pencil"></i>&nbsp;{{ 'admin_poll.table_values.edit' | trans }}
                                 </a>
 
                                 <a href="{{ path('backoffice_poll_publish', {'id': poll.id}) }}"
-                                   onclick="return confirm('{{ 'publish_confirmation' | trans }}')"
+                                   onclick="return confirm('{{ 'admin_poll.table_values.publish_confirmation' | trans }}')"
                                    class="btn btn-primary">
-                                    <i class="fa fa-fighter-jet"></i>&nbsp;{{ 'publish' | trans }}
+                                    <i class="fa fa-fighter-jet"></i>&nbsp;{{ 'admin_poll.table_values.publish' | trans }}
                                 </a>
                             {% endif %}
 
                             <a href="{{ path('backoffice_poll_delete', {'id': poll.id}) }}"
-                               onclick="return confirm('{{ 'delete_confirmation' | trans }}')"
+                               onclick="return confirm('{{ 'admin_poll.table_values.delete_confirmation' | trans }}')"
                                class="btn btn-danger">
-                                <i class="fa fa-trash"></i>&nbsp;{{ 'delete' | trans }}
+                                <i class="fa fa-trash"></i>&nbsp;{{ 'admin_poll.table_values.delete' | trans }}
                             </a>
                         </td>
                     </tr>
