--- a/src/AppBundle/Resources/views/backoffice/users/index.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/users/index.html.twig
@@ -1,12 +1,12 @@
 {% extends "::backoffice_base.html.twig" %}
-{% trans_default_domain 'users' %}
+{% trans_default_domain 'AppBundle' %}
 
-{% block title %}{{ 'users_list' | trans }}{% endblock %}
+{% block title %}{{ 'users.users_list' | trans }}{% endblock %}
 
 {% block bodyclass %}app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden{% endblock %}
 
 {% block main %}
-    <h1 class="text-center pb-2">{{ 'users_list' | trans }}</h1>
+    <h1 class="text-center pb-2">{{ 'users.users_list' | trans }}</h1>
     <table class="table">
         <thead>
         <tr>
@@ -14,13 +14,13 @@
                 {{ knp_pagination_sortable(pagination, '#', 'a.id') }}
             </th>
             <th{% if pagination.isSorted('a.firstname') %} class="sorted"{% endif %}>
-                {{ knp_pagination_sortable(pagination, 'first_name' | trans, 'a.firstname') }}
+                {{ knp_pagination_sortable(pagination, 'users.first_name' | trans, 'a.firstname') }}
             </th>
             <th{% if pagination.isSorted('a.lastname') %} class="sorted"{% endif %}>
-                {{ knp_pagination_sortable(pagination, 'last_name' | trans, 'a.lastname') }}
+                {{ knp_pagination_sortable(pagination, 'users.last_name' | trans, 'a.lastname') }}
             </th>
             <th{% if pagination.isSorted('a.email') %} class="sorted"{% endif %}>
-                {{ knp_pagination_sortable(pagination, 'email' | trans, 'a.email') }}
+                {{ knp_pagination_sortable(pagination, 'users.email' | trans, 'a.email') }}
             </th>
             <th></th>
         </tr>
@@ -36,13 +36,13 @@
                 <td>
                     <a href="{{ path('backoffice_users_update', {'id': user.id}) }}"
                        class="btn btn-primary">
-                        <i class="fa fa-pencil"></i>&nbsp;{{ 'update' | trans }}
+                        <i class="fa fa-pencil"></i>&nbsp;{{ 'users.update' | trans }}
                     </a>
                     {% if not user.hasRole('ROLE_ADMIN') %}
                         <a href="{{ path('backoffice_users_delete', {'id': user.id}) }}"
-                           onclick="return confirm('{{ 'delete_confirmation' | trans }}');"
+                           onclick="return confirm('{{ 'users.delete_confirmation' | trans }}');"
                            class="btn btn-danger">
-                            <i class="fa fa-trash"></i>&nbsp;{{ 'delete' | trans }}
+                            <i class="fa fa-trash"></i>&nbsp;{{ 'users.delete' | trans }}
                         </a>
                     {% endif %}
                 </td>
